--- a/COURSERA-ML/pandas_practice.ipynb
+++ b/COURSERA-ML/pandas_practice.ipynb
@@ -23,6 +23,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style type='text/css'>\n",
+       ".CodeMirror{\n",
+       "font-size: 17px;\n",
+       "</style>\n",
+       "#to increase font size in ipython notebook\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "\n",
+    "%%html\n",
+    "<style type='text/css'>\n",
+    ".CodeMirror{\n",
+    "font-size: 17px;\n",
+    "</style>\n",
+    "#to increase font size in ipython notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -1960,6 +1992,218 @@
     "#individual or set of columns rather than whole dataset\n",
     "df=df.fillna('ffill')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#handling missing data\n",
+    "data = pd.DataFrame([[1., 6.5, 3.], [1., NA, NA], [NA, NA, NA], [NA, 6.5, 3.]])\n",
+    "cleaned = data.dropna()# drop all the rows which have at least one null value\n",
+    "data.dropna(how='all')#drop all the rows which have all the null values\n",
+    "data.dropna(axis=1, how='all')#To drop columns which have all the null values, pass axis=1\n",
+    "df.dropna(thresh=2)# to drops the rows which have exactly 2 null values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Filling In Missing Data\n",
+    "df.fillna(0)#fill all the missing values with 0\n",
+    "df.fillna({1: 0.5, 2: 0})#Calling fillna with a dict, you can use a different fill value for each column\n",
+    "_ = df.fillna(0, inplace=True)#fillna returns a new object, but you can modify the existing object in-place\n",
+    "\n",
+    "df = pd.DataFrame(np.random.randn(6, 3))\n",
+    "df.iloc[2:, 1] = NA\n",
+    "df.iloc[4:, 2] = NA\n",
+    "df.fillna(method='ffill')\n",
+    "df.fillna(method='ffill', limit=2)#fill the rows which have exactly 2 null values\n",
+    "data.fillna(data.mean())#fill null with mean values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Data Transformation\n",
+    "data = pd.DataFrame({'k1': ['one', 'two'] * 3 + ['two'],'k2': [1, 1, 2, 3, 3, 4, 4]})\n",
+    "data.duplicated()#find out duolicates value indexes(boolean type)\n",
+    "data.drop_duplicates()#returns a DataFrame where the duplicated array is False:\n",
+    "data.drop_duplicates(['k1'])#remove duplicates based on perticular column\n",
+    "data.drop_duplicates(['k1', 'k2'], keep='last')#keep last one value\n",
+    "#Replacing Values\n",
+    "data = pd.Series([1., -999., 2., -999., -1000., 3.])\n",
+    "data.replace([-999, -1000], np.nan)#replace all -999 and -1000 to NaN\n",
+    "data.replace([-999, -1000], [np.nan, 0])#To use a different replacement for each value, pass a list of substitutes\n",
+    "\n",
+    "#rename axis index\n",
+    "data = pd.DataFrame(np.arange(12).reshape((3, 4)),\n",
+    "        index=['Ohio', 'Colorado', 'New York'],\n",
+    "        columns=['one', 'two', 'three', 'four'])\n",
+    "transform = lambda x: x[:4].upper()\n",
+    "data.index.map(transform)\n",
+    "data.index = data.index.map(transform)\n",
+    "#If you want to create a transformed version of a dataset without modifying the original,a useful method is rename:\n",
+    "data.rename(index=str.title, columns=str.upper)\n",
+    "data.rename(index={'OHIO': 'INDIANA'}, columns={'three': 'peekaboo'})\n",
+    "data.rename(index={'OHIO': 'INDIANA'}, inplace=True)#changes reflects to originnal dataframe\n",
+    "\n",
+    "\n",
+    "#descritization and binning\n",
+    "#Continuous data is often discretized or otherwise separated into “bins” for analysis\n",
+    "ages = [20, 22, 25, 27, 21, 23, 37, 31, 61, 45, 41, 32]\n",
+    "#Let’s divide these into bins of 18 to 25, 26 to 35, 36 to 60, and finally 61 and older\n",
+    "bins = [18, 25, 35, 60, 100]\n",
+    "cats = pd.cut(ages, bins)\n",
+    "cats.codes#to see label/group associated with each values in ages\n",
+    "cats.categories# to see total categories or bucket\n",
+    "pd.value_counts(cats)#bin counts for the result of pandas.cut.\n",
+    "pd.cut(ages, [18, 26, 36, 61, 100], right=False)#output - [[18, 26), [18, 26), [18, 26), [26, 36)]\n",
+    "\n",
+    "#pass your own bin names by passing a list or array to the labels option\n",
+    "group_names = ['Youth', 'YoungAdult', 'MiddleAged', 'Senior']\n",
+    "pd.cut(ages, bins, labels=group_names)#set custom bin names \n",
+    "\n",
+    "cats = pd.qcut(data, 4) # Cut into quartiles\n",
+    "pd.qcut(data, [0, 0.1, 0.5, 0.9, 1.])#Similar to cut you can pass your own quantiles (numbers between 0 and 1, inclusive)\n",
+    "\n",
+    "\n",
+    "#Detecting and Filtering Outliers\n",
+    "data = pd.DataFrame(np.random.randn(1000, 4))\n",
+    "data.describe()#to show statistical information\n",
+    "data[(np.abs(data) > 3).any(1)]# code to cap values outside the interval –3 to 3\n",
+    "data[np.abs(data) > 3] = np.sign(data) * 3#produces 1 and –1 values based on whether the values in data are positive or negative\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Permutation and Random Sampling\n",
+    "df = pd.DataFrame(np.arange(5 * 4).reshape((5, 4)))\n",
+    "sampler = np.random.permutation(5)# output- array([3, 1, 4, 2, 0])\n",
+    "df.take(sampler)\n",
+    "df.sample(n=3)#To select a random subset without replacement\n",
+    "\n",
+    "choices = pd.Series([5, 7, -1, 6, 4])\n",
+    "draws = choices.sample(n=10, replace=True)#To generate a sample with replacement\n",
+    "\n",
+    "#Computing Indicator/Dummy Variables\n",
+    "#Another type of transformation for statistical modeling or machine learning applications\n",
+    "# is converting a categorical variable into a “dummy” or “indicator” matrix. If a\n",
+    "# column in a DataFrame has k distinct values, you would derive a matrix or Data‐\n",
+    "# Frame with k columns containing all 1s and 0s. pandas has a get_dummies function\n",
+    "# for doing this.\n",
+    "df = pd.DataFrame({'key': ['b', 'b', 'a', 'c', 'a', 'b'], 'data1': range(6)})\n",
+    "pd.get_dummies(df['key'])\n",
+    "\n",
+    "dummies = pd.get_dummies(df['key'], prefix='key')#to add prefix to the column names\n",
+    "df_with_dummy = df[['data1']].join(dummies)\n",
+    "#see movie_genre example in book\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#String Manipulation\n",
+    "count : Return the number of non-overlapping occurrences of substring in the string.\n",
+    "endswith : Returns True if string ends with suffix.\n",
+    "startswith : Returns True if string starts with prefix.\n",
+    "join : Use string as delimiter for concatenating a sequence of other strings.\n",
+    "index : Return position of first character in substring if found in the string; raises ValueError if         not found.\n",
+    "find : Return position of first character of first occurrence of substring in the string; like index,        but returns –1 if not found.\n",
+    "rfind : Return position of first character of last occurrence of substring in the string; returns –1         if not found.\n",
+    "replace : Replace occurrences of string with another string.\n",
+    "strip,\n",
+    "rstrip,\n",
+    "lstrip : Trim whitespace, including newlines; equivalent to x.strip() (and rstrip, lstrip, rectively)\n",
+    "        for each element.\n",
+    "split : Break string into list of substrings using passed delimiter.\n",
+    "lower : Convert alphabet characters to lowercase.\n",
+    "upper : Convert alphabet characters to uppercase.\n",
+    "casefold : Convert characters to lowercase, and convert any region-specific variable character                combinations to a common comparable form.\n",
+    "ljust,rjust :Left justify or right justify, respectively; pad opposite side of string with spaces (or             some other fill character) to return a string with a minimum width."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# regular expresssion\n",
+    "#The regex describing one or more whitespace characters is \\s+\n",
+    "import re\n",
+    "text = \"foo bar\\t baz \\tqux\"\n",
+    "re.split('\\s+', text)#['foo', 'bar', 'baz', 'qux']\n",
+    "regex = re.compile('\\s+')\n",
+    "regex.split(text)\n",
+    "regex.findall(text)#to get a list of all patterns matching the regex,\n",
+    "#While findall returns all matches\n",
+    "# in a string, search returns only the first match. More rigidly, match only matches at\n",
+    "# the beginning of the string.\n",
+    "text = \"\"\"Dave dave@google.com\n",
+    "Steve steve@gmail.com\n",
+    "Rob rob@gmail.com\n",
+    "Ryan ryan@yahoo.com\n",
+    "\"\"\"\n",
+    "pattern = r'[A-Z0-9._%+-]+@[A-Z0-9.-]+\\.[A-Z]{2,4}'\n",
+    "regex = re.compile(pattern, flags=re.IGNORECASE)# re.IGNORECASE makes the regex case-insensitive\n",
+    "#regex.match returns None, as it only will match if the pattern occurs at the start of the string\n",
+    "print(regex.sub('REDACTED', text))#sub will return a new string with occurrences of the pattern replaced by the a new string\n",
+    "print(regex.sub(r'Username: \\1, Domain: \\2, Suffix: \\3', text))\n",
+    "\n",
+    "#You can apply string and regular expression methods can be applied (passing a\n",
+    "# lambda or other function) to each value using data.map, but it will fail on the NA\n",
+    "# (null) values. To cope with this, Series has array-oriented methods for string operations\n",
+    "# that skip NA values. These are accessed through Series’s str attribute;\n",
+    "\n",
+    "data = {'Dave': 'dave@google.com', 'Steve': 'steve@gmail.com','Rob': 'rob@gmail.com', 'Wes': np.nan}\n",
+    "data.str.contains('gmail')\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Partial listing of vectorized string methods\n",
+    "\n",
+    "cat         :Concatenate strings element-wise with optional delimiter\n",
+    "contains    :Return boolean array if each string contains pattern/regex\n",
+    "count       : Count occurrences of pattern\n",
+    "extract     : Use a regular expression with groups to extract one or more strings from a Series of strings; the result\n",
+    "             will be a DataFrame with one column per group\n",
+    "endswith     :Equivalent to x.endswith(pattern) for each element\n",
+    "startswith     : Equivalent to x.startswith(pattern) for each element\n",
+    "findall       :Compute list of all occurrences of pattern/regex for each string\n",
+    "get         :Index into each element (retrieve i-th element)\n",
+    "isalnum     : Equivalent to built-in str.alnum\n",
+    "isalpha      :Equivalent to built-in str.isalpha\n",
+    "isdecimal    : Equivalent to built-in str.isdecimal\n",
+    "isdigit     : Equivalent to built-in str.isdigit\n",
+    "islower     : Equivalent to built-in str.islower\n",
+    "isnumeric    :Equivalent to built-in str.isnumeric\n",
+    "isupper     :Equivalent to built-in str.isupper\n",
+    "join        :Join strings in each element of the Series with passed separator\n",
+    "len        :Compute length of each string\n",
+    "lower, upper     :Convert cases; equivalent to x.lower() or x.upper() for each element\n",
+    "match        :Use re.match with the passed regular expression on each element, returning matched groups as list\n",
+    "pad       :Add whitespace to left, right, or both sides of strings\n",
+    "center      :Equivalent to pad(side='both')\n",
+    "repeat    : Duplicate values (e.g., s.str.repeat(3) is equivalent to x * 3 for each string)\n",
+    "replace    : Replace occurrences of pattern/regex with some other string\n",
+    "slice      :Slice each string in the Series\n",
+    "split      :Split strings on delimiter or regular expression\n",
+    "strip     :Trim whitespace from both sides, including newlines\n",
+    "rstrip     :Trim whitespace on right side\n",
+    "lstrip     :Trim whitespace on left side    \n"
    ]
   },
   {
